wallet-server/kustomize/wallet-server/overlays/local/add-ca.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-server
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: wallet-server-ca-cert
      containers:
        - name: server
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/wallet/tls
